fixing card title alignment

--- a/src/components/AdminPage/TeamCard/TeamCard.scss
+++ b/src/components/AdminPage/TeamCard/TeamCard.scss
@@ -30,7 +30,7 @@
   white-space: nowrap; /* Don't forget this one */
   text-overflow: ellipsis;
   width: 260px;
-  text-align: center;
+  text-align: center !important;
   overflow: hidden;
   padding-top: 20px;
   padding-left: 10px;
@@ -109,7 +109,7 @@
     overflow: hidden;
     padding-top: 20px;
     padding-left: 10px;
-    text-align: left;
+    text-align: left !important;
     padding-right: 10px;
   }
 
